Fix player ship text having the wrong color

--- a/src/briefing/topics/_colors.scss
+++ b/src/briefing/topics/_colors.scss
@@ -85,7 +85,7 @@ $highlighted: fuchsia;
 		background-clip: text;
 		-webkit-background-clip: text;
 	}
-	&:is(.player, .player.enemy.ally) {
+	&.player, &.player.enemy.ally {
 		color: $player;
 	}
 }
